A few final styling fixes on mobile

--- a/assets/_sass/_custom.scss
+++ b/assets/_sass/_custom.scss
@@ -311,6 +311,9 @@ $tiniest: new-breakpoint(max-width 390px);
 			display: none;
 		}
 	}
+	@include media($tinier) {
+		top: 16px;
+	}
 }
 .global-nav:last-child {
 	@include media($tiny) {
